

package cafe;

/**
 *
 * @author c16318
 */
public class Coffee extends CaffeeinBevarage{
    
    public void brew(){
        System.out.println("");
        
    }
    
    public void addCondiments(){
        
    }
    
}
